[package]
name = "wasm"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-wasi"

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
rand = { version = "0.7.1", features = ["wasm-bindgen"] }
serde-wasm-bindgen = "0.1.3"
serde = { version="*", features=["derive"]}
serde_json = "*"
geojson= "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
